--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,11 @@
 * {
   box-sizing: border-box;
 }
+html {
+  height:100%;
+}
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  height: 75%;
 }
 .topnav {
   overflow: hidden;
